--- a/diapos/SFCR_Seguridad.tex
+++ b/diapos/SFCR_Seguridad.tex
@@ -1,4 +1,4 @@
-% Created 2023-03-06 lun 21:22
+% Created 2024-02-28 mié 19:17
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
@@ -55,7 +55,7 @@
  pdftitle={SFCR: Seguridad Eléctrica},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 28.2 (Org mode 9.6)}, 
+ pdfcreator={Emacs 29.1 (Org mode 9.6.11)}, 
  pdflang={Spanish}}
 \begin{document}
 
@@ -63,9 +63,9 @@
 
 
 \section{Definiciones}
-\label{sec:orgc43f254}
+\label{sec:orgcbaa22e}
 
-\begin{frame}[label={sec:org06732fa}]{Contacto Directo e Indirecto}
+\begin{frame}[label={sec:org93e162e}]{Contacto Directo e Indirecto}
 \begin{description}
 \item[{Partes Activas:}] Conductores y piezas conductoras bajo tensión en
 servicio normal. Incluyen el conductor neutro y las partes
@@ -79,7 +79,7 @@ se han puesto bajo tensión como resultado de un fallo de aislamiento.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orge6107a8}]{Masa y Tierra}
+\begin{frame}[label={sec:org322c179}]{Masa y Tierra}
 \begin{description}
 \item[{Masa:}] Conjunto de las partes metálicas de un aparato que, en
 condiciones normales, están aisladas de las partes activas.
@@ -92,7 +92,7 @@ con el suelo y que asegura la conexión eléctrica con el mismo.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orge2a47d9}]{Tensión de contacto y defecto}
+\begin{frame}[label={sec:org0ce1ce7}]{Tensión de contacto y defecto}
 \begin{block}{Tensión de contacto}
 \begin{itemize}
 \item Tensión que aparece entre \alert{partes accesibles simultáneamente} al
@@ -110,7 +110,7 @@ una toma de tierra de referencia.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org3d77d8d}]{Clases de materiales}
+\begin{frame}[label={sec:orgfeb1e3f}]{Clases de materiales}
 \begin{itemize}
 \item Material de clase 0
 \begin{itemize}
@@ -135,7 +135,7 @@ protección puesto a tierra
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org471a3cc}]{Esquemas de conexión a tierra}
+\begin{frame}[label={sec:org27169bb}]{Esquemas de conexión a tierra}
 \begin{description}
 \item[{Primera letra:}] conexión de alimentación y tierra
 
@@ -156,7 +156,7 @@ a tierra (en alterna, normalmente el neutro)
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org81029e5}]{Esquemas de conexión a tierra}
+\begin{frame}[label={sec:org502926b}]{Esquemas de conexión a tierra}
 \begin{description}
 \item[{TN:}] en alterna, neutro puesto a tierra, y masas conectadas al
 neutro (directamente o a través de un conductor de protección).
@@ -171,7 +171,7 @@ conectadas a tierra.\\[0pt]
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org86bac07}]{Esquemas de conexión a tierra}
+\begin{frame}[label={sec:org3b04d6a}]{Esquemas de conexión a tierra}
 En un sistema fotovoltaico es de uso común que el esquema de tierra sea:
 \begin{itemize}
 \item \alert{IT en la zona del generador fotovoltaico}
@@ -180,12 +180,12 @@ En un sistema fotovoltaico es de uso común que el esquema de tierra sea:
 \end{frame}
 
 \section{Protección de las personas}
-\label{sec:orgc1fac9c}
+\label{sec:org5a80496}
 
 \subsection{Efectos de la corriente eléctrica}
-\label{sec:org82fbe3a}
+\label{sec:orgb8a0a6d}
 
-\begin{frame}[label={sec:org75baf36}]{Intensidad y tiempo de contacto}
+\begin{frame}[label={sec:org3424d40}]{Intensidad y tiempo de contacto}
 \begin{itemize}
 \item Hasta 10 mA no genera efectos peligrosos (calambres).
 
@@ -202,7 +202,7 @@ resistencia expuesta}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2c36c16}]{Frecuencia eléctrica}
+\begin{frame}[label={sec:org33ec908}]{Frecuencia eléctrica}
 \begin{itemize}
 \item Continua:
 
@@ -238,9 +238,9 @@ convencional (la corriente circula por la piel, sin atravesar
 \end{frame}
 
 \subsection{Contacto Directo}
-\label{sec:org168dd7c}
+\label{sec:orgbaa8cb9}
 
-\begin{frame}[label={sec:org1f817dd}]{REBT: Contactos Directos}
+\begin{frame}[label={sec:orgbfa7634}]{REBT: Contactos Directos}
 Según la ITC-BT-24 las protecciones a utilizar para proteger frente a
 contactos directos deben estar \alert{basadas en evitar que una persona pueda
 entrar en contacto con las partes activas} de la instalación.
@@ -260,7 +260,7 @@ diferencial}-residual
 \end{frame}
 
 
-\begin{frame}[label={sec:orgdc2be74}]{Contacto Directo IT}
+\begin{frame}[label={sec:org66af186}]{Contacto Directo IT}
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/ContactoDirectoIT_Capacidad.pdf}
 \end{center}
@@ -272,7 +272,7 @@ para producir dolor, y tensiones superiores a los \(\SI{3000}{\volt}\)
 para que exista riesgo por fibrilación.
 \end{frame}
 
-\begin{frame}[label={sec:org5922337}]{Contacto Directo TT}
+\begin{frame}[label={sec:orga8fb35f}]{Contacto Directo TT}
 $$I_{F,max}=\frac{V_{ocG}}{R_{H}+R_{p}+R_{ts}}$$
 
 \begin{columns}
@@ -294,10 +294,10 @@ $$I_{F,max}=\frac{V_{ocG}}{R_{H}+R_{p}+R_{ts}}$$
 
 
 \subsection{Contacto Indirecto}
-\label{sec:orge9d4095}
+\label{sec:orgdae0020}
 
 
-\begin{frame}[label={sec:org4aab444}]{REBT: Contactos Indirectos}
+\begin{frame}[label={sec:org9cab1bf}]{REBT: Contactos Indirectos}
 La ITC-BT-24 recoge las formas de protección para contactos
 indirectos:
 
@@ -316,7 +316,7 @@ entran en contacto con ella.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgc089842}]{Contacto Indirecto IT}
+\begin{frame}[label={sec:org9d14c75}]{Contacto Indirecto IT}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -337,7 +337,7 @@ I_{F} & = & 0\end{aligned}$$
 \end{frame}
 
 
-\begin{frame}[label={sec:orgfb26e6c}]{Contacto Indirecto TT}
+\begin{frame}[label={sec:org3409879}]{Contacto Indirecto TT}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -356,10 +356,10 @@ $$V_{c}\simeq I_{scG}\cdot R_{tp}$$
 
 
 \subsection{Niveles de Protección en Sistema IT}
-\label{sec:orgf2592d3}
+\label{sec:org767516b}
 
 
-\begin{frame}[label={sec:org4350c60}]{Tres niveles de protección}
+\begin{frame}[label={sec:orge28ac07}]{Tres niveles de protección}
 Todo el sistema de protección para sistemas IT se puede concebir en tres
 niveles:
 
@@ -372,7 +372,7 @@ niveles:
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org9d46dd5}]{Nivel 1: Refuerzo del aislamiento de las partes activas.}
+\begin{frame}[label={sec:orgf6ff4e2}]{Nivel 1: Refuerzo del aislamiento de las partes activas.}
 \begin{description}
 \item[{Configuración flotante del generador:}] se imposibilitan los
 accidentes por la aparición de contactos indirectos de primer
@@ -387,7 +387,7 @@ corriente de fallo a través del inversor.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org068a323}]{Nivel 2: Sistema de detección de aislamiento.}
+\begin{frame}[label={sec:org49308bf}]{Nivel 2: Sistema de detección de aislamiento.}
 \begin{description}
 \item[{Vigilante de aislamiento:}] Este elemento genera una señal de baja
 frecuencia (2 a 5 Hz) para evitar las fugas capacitivas del cableado,
@@ -401,7 +401,7 @@ tierra del mismo.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org71e3f89}]{Nivel 3: Protección en caso de fallo de los niveles 1 y 2:}
+\begin{frame}[label={sec:org1c835b9}]{Nivel 3: Protección en caso de fallo de los niveles 1 y 2:}
 \begin{description}
 \item[{En caso de fallo de los niveles anteriores}] aún queda la
 protección proporcionada por la puesta a tierra directa de todas las
@@ -413,12 +413,12 @@ respecto a tierra puedan adquirir las masas en caso de derivación.
 
 
 \section{Protección de los equipos}
-\label{sec:org1bf9ebe}
+\label{sec:org32579e5}
 
 \subsection{Tormentas eléctricas}
-\label{sec:org391965a}
+\label{sec:org03efa14}
 
-\begin{frame}[label={sec:org7becc91}]{Formación de las tormentas}
+\begin{frame}[label={sec:orgb46a065}]{Formación de las tormentas}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -446,7 +446,7 @@ descarga y determina el lugar del impacto.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org88671a7}]{Influencia de las condiciones locales}
+\begin{frame}[label={sec:orgfba9c82}]{Influencia de las condiciones locales}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -470,13 +470,13 @@ ascendentes que conecten con el descendente.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org4a263af}]{Influencia de los sistemas fotovoltaicos}
+\begin{frame}[label={sec:org7377457}]{Influencia de los sistemas fotovoltaicos}
 Por tanto, \alert{las instalaciones fotovoltaicas no aumentan la probabilidad
 de descargas locales} (determinadas por las nubes), pero una vez que se
 producen, son lugares con mayor probabilidad de impacto.
 \end{frame}
 
-\begin{frame}[label={sec:org120d51b},plain]{Descarga y campo magnético}
+\begin{frame}[label={sec:org3c1706a},plain]{Descarga y campo magnético}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{center}
@@ -495,7 +495,7 @@ producen, son lugares con mayor probabilidad de impacto.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgac4a9dc},plain]{Factores de influencia}
+\begin{frame}[label={sec:orgd7de4a1},plain]{Factores de influencia}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{center}
@@ -518,16 +518,16 @@ tormenta).
 \end{frame}
 
 \subsection{Protecciones}
-\label{sec:org055a1bd}
+\label{sec:orgc29de92}
 
 
-\begin{frame}[label={sec:org071d882}]{Area y cableado}
+\begin{frame}[label={sec:org8aaf709}]{Area y cableado}
 \begin{center}
 \includegraphics[width=\textwidth]{../figs/BucleCableadoOptimo.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgcb0c1a4}]{Protección externa}
+\begin{frame}[label={sec:org1605d9a}]{Protección externa}
 Un sistema de protección externa contra el rayo se compone de:
 
 \begin{itemize}
@@ -539,13 +539,13 @@ Un sistema de protección externa contra el rayo se compone de:
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0db80d3}]{Protección externa}
+\begin{frame}[label={sec:org4cb0fb0}]{Protección externa}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/AreaProteccionPararrayos.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org419465d}]{Protección externa}
+\begin{frame}[label={sec:org5c0dcc6}]{Protección externa}
 \begin{itemize}
 \item Se debe calcular una \alert{distancia de seguridad} entre la bajada del
 pararrayos y las instalaciones metálicas cercanas.
@@ -565,36 +565,40 @@ puesta a tierra deben ser \alert{independientes}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org50e6cfc}]{Protecciones internas}
+\begin{frame}[label={sec:orga8b1c5f}]{Protecciones internas}
 \begin{itemize}
 \item \alert{Todas las masas deben estar conectadas a un sistema de puesta a
 tierra}.
 
 \item En la entrada/salida de cada elemento a proteger se instalan
-\alert{supresores de tensión (varistores)} entre conductores activos y
+\alert{descargadores de tensión} entre conductores activos y
 tierra.
 \end{itemize}
 \end{frame}
 
 \section{Resumen de protecciones}
-\label{sec:org7504087}
-
-\begin{frame}[label={sec:org328d8c2},plain]{Diagrama Unifilar}
-\begin{center}
-\includegraphics[width=1\textwidth]{../figs/UnifilarCR1.pdf}
-\end{center}
-\end{frame}
+\label{sec:orgfb1f88f}
 
 \subsection{Circuito DC}
-\label{sec:org121dc16}
-\begin{frame}[label={sec:org882849e}]{}
+\label{sec:org359690d}
+\begin{frame}[label={sec:org2ca8b52}]{}
+\begin{columns}
+\begin{column}{0.4\columnwidth}
 \begin{center}
 \includegraphics[height=0.8\textheight]{../figs/CajaProteccionesPhotocampa.pdf}
 \end{center}
+\end{column}
+
+\begin{column}{0.6\columnwidth}
+\begin{center}
+\includegraphics[height=0.8\textheight]{../figs/proteccionesDC.pdf}
+\end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
 
-\begin{frame}[label={sec:org6f7c91f}]{Cortocircuitos}
+\begin{frame}[label={sec:org5d65cc5}]{Cortocircuitos}
 \begin{itemize}
 \item El \alert{cortocircuito} es un punto de trabajo \alert{no peligroso para el
 generador fotovoltaico}.
@@ -612,7 +616,7 @@ para evitar cortocircuitos por pérdida de aislamiento.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org73d3fc1}]{Fusibles}
+\begin{frame}[label={sec:org874f3cc}]{Fusibles}
 \begin{itemize}
 \item El \alert{fusible por rama} sirve principalmente como \alert{elemento de
 seccionamiento} (facilita las tareas de mantenimiento).
@@ -638,7 +642,7 @@ seccionamiento} (facilita las tareas de mantenimiento).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org4fc3a64}]{Descargadores de tensión}
+\begin{frame}[label={sec:org304960b}]{Descargadores de tensión}
 \begin{itemize}
 \item Entrada CC del inversor protegida mediante \alert{descargadores de tensión} para
 proteger contra sobretensiones de origen atmosférico.
@@ -654,15 +658,16 @@ tensión de circuito abierto.
 \end{frame}
 
 
+
 \subsection{Circuito AC}
-\label{sec:org72cc39c}
-\begin{frame}[label={sec:org3ba932f}]{}
+\label{sec:orgd4ad266}
+\begin{frame}[label={sec:org055ac5f}]{}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/CajaAC.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org3cccd2f}]{Cortocircuitos y sobrecargas}
+\begin{frame}[label={sec:org565c198}]{Cortocircuitos y sobrecargas}
 \begin{itemize}
 \item Es necesario incluir un \alert{interruptor general manual} (interruptor
 magnetotérmico omnipolar)
@@ -682,7 +687,7 @@ inversor.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2508242}]{Cortocircuitos y sobrecargas}
+\begin{frame}[label={sec:org4b5f4f3}]{Cortocircuitos y sobrecargas}
 \begin{itemize}
 \item Se utilizarán \alert{magnetotérmicos tipo C} (indicados cuando no existen corrientes de arranque de consumo elevadas).
 
@@ -690,7 +695,7 @@ inversor.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7d24d05}]{Interruptor diferencial}
+\begin{frame}[label={sec:org01c7551}]{Interruptor diferencial}
 \begin{itemize}
 \item \alert{No funciona en circuitos DC} (alternativa: vigilante de
 aislamiento).
@@ -708,7 +713,7 @@ de conexión a red} (conexión TT).
 
 
 
-\begin{frame}[label={sec:org463ecf8}]{Puesta a tierra}
+\begin{frame}[label={sec:orgcb2a12e}]{Puesta a tierra}
 \begin{itemize}
 \item \alert{La puesta a tierra} se realizará de forma que \alert{no altere la de la
 compañía eléctrica distribuidora}, con el fin de no transmitir
@@ -722,9 +727,9 @@ de acuerdo con el Reglamento Electrotécnico para Baja Tensión.
 
 
 \section{Puesta a tierra}
-\label{sec:org147c47b}
+\label{sec:org88661ba}
 
-\begin{frame}[label={sec:org587b5e1}]{Tomas de tierra existentes}
+\begin{frame}[label={sec:orgbc8c581}]{Tomas de tierra existentes}
 A la hora de realizar puestas a tierra en lugares donde ya existen
 tomas a tierra que pertenecen a otras instalaciones eléctricas.
 
@@ -742,7 +747,7 @@ distancias superiores a \(\SI{15}{\meter}\).
 \end{frame}
 
 
-\begin{frame}[label={sec:org7611a27}]{Cálculo de resistencia para generador}
+\begin{frame}[label={sec:org610df0b}]{Cálculo de resistencia para generador}
 \begin{itemize}
 \item Un sistema IT es intrínsecamente seguro.
 \item No obstante, la corriente de defecto máxima es \(I_f=\SI{30}{\milli\ampere}\) (vigilante de aislamiento).
@@ -752,7 +757,7 @@ distancias superiores a \(\SI{15}{\meter}\).
 $$R_{tp}\leq\frac{V_{max}}{I_{f}} = \qty{800}{\ohm}$$
 \end{frame}
 
-\begin{frame}[label={sec:org5cbe867}]{Cálculo de la resistencia de tierra}
+\begin{frame}[label={sec:orgc6808ad}]{Cálculo de la resistencia de tierra}
 \begin{itemize}
 \item \alert{Resistencia de pica vertical}
 
@@ -778,7 +783,7 @@ Suelos pedregosos & \(\SI{3000}{\ohm\meter}\)\\[0pt]
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgc2dea65}]{Cálculo de la resistencia de tierra}
+\begin{frame}[label={sec:org2534d35}]{Cálculo de la resistencia de tierra}
 \begin{itemize}
 \item \alert{Electrodos en paralelo}:
 
@@ -793,7 +798,7 @@ electrodos interconectados. La \alert{resistencia equivalente} es
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org3ccc51d}]{Ejemplo}
+\begin{frame}[label={sec:org6dd4912}]{Ejemplo}
 \begin{itemize}
 \item Se desea conseguir una resistencia de puesta a tierra de \(R_{t}=\qty{5}{\ohm}\).
 \item Los apoyos están separados \(\qty{4}{\meter}\)
@@ -804,7 +809,7 @@ electrodos interconectados. La \alert{resistencia equivalente} es
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgae98c9b}]{Ejemplo}
+\begin{frame}[label={sec:org105026f}]{Ejemplo}
 \begin{itemize}
 \item En primer lugar calculamos la resistencia aportada por el conductor enterrado:
 \end{itemize}
