--- a/libro/Seguridad.tex
+++ b/libro/Seguridad.tex
@@ -902,25 +902,24 @@ el apartado de protección de equipos. El rango de la tensión de operación
 está definido por la tensión en el punto de máxima potencia y tensión
 de circuito abierto del generador fotovoltaico.
 
-En la figura \ref{fig:Caja-de-protecci=0000F3n} se muestra un ejemplo
-de una caja de protecciones situada a la salida de un generador fotovoltaico.
-Incluye un conjunto de fusibles de rama tanto en el polo positivo
-como en el negativo. A la salida del paralelo de estos fusibles se
-han instalado tres descargadores de tensión, uno para conectar el polo positivo
-con tierra, otro para conectar el polo negativo con tierra y otro
-tercero para interconectar los dos polos. Existen equipos comerciales
-que incluyen los tres descargadores interconectados.
+En la figura \ref{fig:Caja-de-proteccion} se muestra un ejemplo de una
+caja de protecciones situada a la salida de un generador fotovoltaico
+y el esquema correspondiente. Esta caja incluye un fusible por rama
+tanto en el polo positivo como en el negativo. A la salida del
+paralelo de estos fusibles se han instalado tres descargadores de
+tensión, uno para conectar el polo positivo con tierra, otro para
+conectar el polo negativo con tierra y otro tercero para interconectar
+los dos polos. Existen equipos comerciales que incluyen los tres
+descargadores interconectados.
 
 %
 \begin{figure}
-\begin{centering}
-\includegraphics[scale=0.5]{../figs/CajaProteccionesPhotocampa}
-\end{centering}
-
-\caption[Caja de protección DC]{Caja de protección DC. Incluye dos
+  \subfloat[Caja de protecciones]{\includegraphics[scale=0.5]{../figs/CajaProteccionesPhotocampa}}
+  \hspace{1cm}
+  \subfloat[Esquema eléctrico]{\includegraphics[scale=0.8]{../figs/proteccionesDC}}
+\caption{Caja de protecciones DC. Incluye dos
   fusibles por rama y descargadores de tensión entre polos y
-  tierra.\label{fig:Caja-de-protecci=0000F3n}}
-
+  tierra.\label{fig:Caja-de-proteccion}}
 \end{figure}
 
 
